--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="links">
                     <i class="fa-solid fa-bars fa-2x"></i>
                     <ul>
-                        <li><a href="#features">Fffffffffffffffeatures</a></li>
+                        <li><a href="#features">Features</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
                         <li><a href="#about">About</a></li>
