--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="parent">
         <div class="header">
             <div class="container">
-                <img class="logo" src="images/logo.png" alt="pecture-logo">
+                <img class="logo" src="images/logo.png" alt="logo">
                 <div class="links">
                     <i class="fa-solid fa-bars fa-2x"></i>
                     <ul>
