--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leon Template One</title>
+    <title>Design Leon Template</title>
     <link rel="stylesheet" href="css/leon.css">
         <!-- Import Normalize Css File" -->
     <link rel="stylesheet" href="css/normalize.css">
